Update environment variables and add retry functionality

--- a/.env.sample
+++ b/.env.sample
@@ -1,4 +1,8 @@
-API_TOKEN=""
-ORG_SLUG="github/HnryNZ"
-PROJECT_NAME="hnry-rails"
-WORKFLOW="build_test_deploy"
+# Required environment variables
+API_TOKEN=your_circle_ci_token_here
+ORG_SLUG=github/your-org
+PROJECT_NAME=your-project-name
+
+# Optional environment variables (with defaults)
+TIMEFRAME_DAYS=7     # Number of days to look back for pipelines (default: 7)
+MAX_PIPELINES=100    # Maximum number of pipelines to fetch (default: 100)
