Add configurable batch size for job processing

--- a/.env.sample
+++ b/.env.sample
@@ -6,3 +6,4 @@ PROJECT_NAME=your-project-name
 # Optional environment variables (with defaults)
 TIMEFRAME_DAYS=7     # Number of days to look back for pipelines (default: 7)
 MAX_PIPELINES=100    # Maximum number of pipelines to fetch (default: 100)
+BATCH_SIZE=20       # Number of jobs to process in parallel (default: 5)
