--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "typescript": "^5.7.2"
   },
   "dependencies": {
+    "@catalystic/json-to-yaml": "^1.0.0",
     "axios": "^1.7.8",
     "dotenv": "^16.4.5"
   }
