--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,12 @@
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,  
     "strict": true,
-    "skipLibCheck": true
-  }
+    "skipLibCheck": true  
+  },
+  "ts-node": {
+    "compilerOptions": {
+      "module": "commonjs",
+      "moduleResolution": "Node"
+    }
+  }    
 }
