--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start:clear": "ts-node ./src/clear-outputs.ts && npm run start",
     "start:retry": "ts-node ./src/retry-job-details.ts",
     "start:analysis:timedout": "ts-node ./src/analysis-timedout.ts",
+    "start:analysis:timeout-frequency": "ts-node ./src/analysis-scripts/timeout-frequency/index.ts",
     "build": "tsc"
   },
   "keywords": [],
